corrected z-index, position bug

--- a/public/css/my_custom/welcome/welcome.css
+++ b/public/css/my_custom/welcome/welcome.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   border: 0;
   padding: 0;
-  height: 2000px;
+  /* height: 2000px; */
 }
 
 /* a {
@@ -11,6 +11,7 @@ body {
 } */
 
 .menuBody {
+  position: fixed;
   z-index: 2;
 }
 
@@ -47,7 +48,7 @@ body {
     linear-gradient(
       rgba(139,0,0,1),
       rgba(139,0,0,1) 85%,
-      rgba(0,0,0,0.8));
+      rgba(0,0,0,1));
   cursor: pointer;
 }
 
@@ -95,8 +96,8 @@ body {
   }
 }
 
-.contentBody {
-   background-image:url('../../../images/welcome/1st_Battalion_5th_Infantry_Regiment_1st_Stryker_Brigade_Combat_Team_25th_Infantry_Division_Afghan-min.jpg');
+.introBody {
+   background-image: url('../../../images/welcome/1st_Battalion_5th_Infantry_Regiment_1st_Stryker_Brigade_Combat_Team_25th_Infantry_Division_Afghan-min.jpg');
    background-size:cover;
    background-position:right;
    position: absolute;
@@ -104,7 +105,7 @@ body {
    left: 0;
    height:100vh;
    width: 100vw;
-   z-index: -1;
+   z-index: 1;
 }
 
 .mainTitle {
@@ -144,4 +145,12 @@ body {
   background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.7));
   height: 5vh;
   width: 100vw;
+  cursor: pointer;
+}
+
+.lowerBody {
+  margin-top: 100vh;
+  position: absolute;
+  z-index: 0;
+  height: 1000px;
 }
